--- a/public/styles/style1290.css
+++ b/public/styles/style1290.css
@@ -4,9 +4,6 @@
     }
 }
 @media (min-width: 992px) and (max-width: 2600px) {
-    body {
-        overflow-x: hidden;
-    }
     .firstScreen {
         width: 100%;
     }
@@ -140,13 +137,13 @@
     .wrap_map {
         margin-bottom: 900px;
     }
-    .spaces-scroll {
+    /* .spaces-scroll {
         height: 2625px;
-    }
+    } */
 }
 @media (min-width: 992px) and (max-width: 1290px) {
-    .wrap_allScreens {
-        -moz-transform: scale(78%, 78%);
+    body {
+        -moz-transform: scale(0.78, 0.78);
         zoom: 0.78;
         zoom: 78%;
     }
